feat: 回调打印异常